src/components/ToolCard/toolCard.module.scss
@import "../../sass/abstracts/variables.scss";
@import "../../sass/abstracts/mixins.scss";

.cardLink {
  font-family: $texts-fonts;
  text-decoration: none;
  color: black;

  display: block;
  width: calc(50% - 1rem);
  align-self: flex-start;

  @include responsiveDesign(600) {
    width: 100%;
  }
}

.container {
  background-color: white;
  border-radius: 1rem;

  padding: 1rem;
}

.upperHalfContainer {
  display: flex;
}

.logoContainer {
  display: grid;
  align-content: center;
  margin-right: 1rem;
}

.titleIconsDescriptionContainer {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;

  width: 100%;

  & p {
    font-size: 1.6rem;
  }
}

.titleIconsContainer {
  display: flex;
  justify-content: space-between;

  & .cardTitle {
    font-size: 2.5rem;
  }
}

.toggleIconsContainer {
  display: flex;
  align-self: flex-start;
  border-top-right-radius: 1rem;
}

.tagsContainer {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
}

.horizontalBar {
  height: 1px;
  width: 100%;
  background: black;
  margin: 1rem 0;
}

// ICON BUTTONS

.toggleHeartInput,
.toggleGearInput {
  display: none;

  &:checked + .toggleHeartLabel {
    fill: #e2264d;
  }
}

.toggleHeartLabel,
.gearIcon {
  fill: #aab8c2;
  font-size: 3rem;
  cursor: pointer;
  //align-self: center;

  transition: $quick-transition;

  &:hover {
    fill: #686b6e;
  }
}

.gearIconChecked {
  fill: black;
}

.toggleHeartLabel,
.menuButtonContainer {
  position: relative;
  top: -1rem;
  right: -1rem;
  padding: 1rem 1rem 0;
}

// MENU
.menuButtonContainer {
  position: relative;
}

